# projeto-garagem

./: .gitignore  db.sqlite3  package-lock.json  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  apps.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_acessorio_cor_veiculo.py  0002_veiculo_imagem.py  0003_alter_acessorio_options_alter_cor_options_and_more.py  0003_veiculo_modelo_alter_veiculo_preco.py  0004_modelo_alter_veiculo_preco_alter_veiculo_modelo.py  0004_remove_veiculo_imagem_veiculo_imagem.py  0005_alter_acessorio_options_alter_cor_options_and_more.py  0005_alter_modelo_categoria_alter_modelo_marca.py
garagem/models/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
